# bunsen

./: .gitignore  CMakeLists.txt  README.md  bunsen.code-workspace  doxygen.conf
cmake/: get_imgui.cmake  get_imgui_file_dialog.cmake  get_imgui_icon_font_headers.cmake  get_inih.cmake  get_tinygltf.cmake  get_tracy.cmake
resources/shaders/: aabb.fs.glsl  aabb.gs.glsl  aabb.vs.glsl  basic_preview.fs.glsl  basic_preview.vs.glsl  bilboard.vs.glsl  bilboard_light.fs.glsl  bilboard_light.vs.glsl  downsample_msaa.fs.glsl  draw_sampled_image.fs.glsl  draw_sampled_image.vs.glsl  grid.fs.glsl  grid.vs.glsl  outline.fs.glsl  outline.gs.glsl  outline.vs.glsl  preview.fs.glsl  preview.vs.glsl
src/: assimp_loader.cpp  assimp_loader.hpp  async_task.hpp  borealis.cpp  borealis.hpp  bunsen.cpp  bunsen.hpp  camera.cpp  camera.hpp  config.cpp  config.hpp  event.cpp  event.hpp  events.hpp  gl.hpp  input.cpp  input.hpp  light.hpp  log.cpp  log.hpp  material.hpp  mesh.cpp  mesh.hpp  model.hpp  modified_flag.hpp  mouse.cpp  mouse.hpp  mrsw.hpp  no_copy.hpp  renderer.hpp  resource.hpp  resource_manager.hpp  scene.cpp  scene.hpp  scene_export.cpp  scene_export.hpp  scene_selection.hpp  ui.cpp  ui.hpp  uid_provider.hpp  (+3 more)
src/editor/: editor.cpp  editor.hpp  imgui_overlay.cpp  imgui_overlay.hpp  layout_editor.cpp  layout_editor.hpp  scene_selection.cpp  scene_selection.hpp
src/editor/ui/: light_menu.cpp  light_menu.hpp  material_editor.cpp  material_editor.hpp  material_menu.cpp  material_menu.hpp  mesh_control.cpp  mesh_control.hpp  model_menu.cpp  model_menu.hpp  rendered_view.cpp  rendered_view.hpp  scene_control.cpp  scene_control.hpp  ui.cpp  ui.hpp  window.cpp  window.hpp  world_menu.cpp  world_menu.hpp
src/gl/: gl.cpp  gl.hpp  shader.cpp  shader.hpp
src/materials/: diffuse_material.hpp  emissive_material.hpp  generic_material.hpp  generic_volume.hpp  glass_material.hpp
src/preview/: preview.cpp  preview.hpp  preview.vsh.glsl
src/renderers/: basic_gl_renderer.cpp  basic_gl_renderer.hpp
src/renderers/albedo/: albedo.cpp  albedo.hpp
src/renderers/basic_preview/: basic_preview.cpp  basic_preview.hpp
src/renderers/preview/: basic_preview.cpp  basic_preview.hpp  preview.cpp  preview.hpp
src/renderers/rt/: aabb.cpp  aabb.hpp  bvh.cpp  bvh.hpp  bvh_builder.cpp  bvh_builder.hpp  bvh_populate.cpp  core.hpp  job.cpp  job.hpp  kernel.cpp  kernel.hpp  linear_stack.hpp  material.cpp  material.hpp  minmax_tracker.hpp  pool_allocator.hpp  ray.hpp  rt.cpp  rt.hpp  sampled_image.cpp  sampled_image.hpp  scene.hpp  scene_cache.cpp  scene_cache.hpp  worker.cpp  worker.hpp
src/resmgr/: name_manager.cpp  name_manager.hpp  resource.hpp  resource_manager.hpp
src/ui/: editor.cpp  editor.hpp  icons.hpp  imgui_overlay.cpp  layout_editor.cpp  layout_editor.hpp  ui.cpp  ui.hpp  widget.cpp  widget.hpp  window.cpp  window.hpp
src/ui/widgets/: light_widget.cpp  light_widget.hpp  material_widget.cpp  material_widget.hpp  model_import_dialog.cpp  model_import_dialog.hpp  model_widget.cpp  model_widget.hpp  node_widget.cpp  node_widget.hpp  scene_graph_widget.cpp  scene_graph_widget.hpp  world_widget.cpp  world_widget.hpp
src/ui/windows/: debug_window.cpp  debug_window.hpp  imgui_style_editor_window.cpp  imgui_style_editor_window.hpp  rendered_view_window.cpp  rendered_view_window.hpp  scene_editor_window.cpp  scene_editor_window.hpp
